error scenerios handled

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Github Profile Viewer</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
   <!-- HEADER SECTION -->
@@ -33,7 +34,9 @@
 
    <!-- FOOTER -->
 
-   <footer></footer>
+   <footer class="text-center footer">
+     Built with ♥ and Angular
+   </footer>
 
    <script data-main="js/main" src="js/vendor/require.js"></script>
   </body>
