--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Github Profile Viewer</title>
+    <title>Github Client</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-default">
        <div class="container">
          <div class="navbar-header">
-           <a class="navbar-brand" ui-sref='home'>Github Profile Viewer</a>
+           <a class="navbar-brand" ui-sref='home'>Github Client</a>
          </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
